# ScratchBird

./: .gitignore  BLOCKER_1_RESOLUTION.md  CHANGELOG.md  CMakeLists.txt  COMPILATION_METHODS.md  COMPILATION_SUCCESS_SUMMARY.md  MIGRATION_GUIDE.md  Makefile  Makefile.in  NEXT_SESSION_PLAN.md  NEXT_SESSION_SUMMARY.md  PROJECT_CLEANUP_SUMMARY.md  README.md  README_DEV.md  RELEASE_BLOCKERS.md  SESSION_STATUS.md  SESSION_SUMMARY_JULY_15.md  TECHNICAL_DEBT.md  TODO_DATATYPE_INDEX_REFACTOR.md  UNSIGNED_INTEGER_VARCHAR_ANALYSIS.md  VARCHAR_128K_UTF8_ANALYSIS.md  adapt_build_system.sh  build_scratchbird.sh  build_scratchbird_complete.sh  complete_release.sh  configure  configure.ac  configure_platform.sh  create_linux_installer.sh  create_mock_library.cpp  create_windows_library.cpp  debug_gpre  debug_gpre.cpp  libsbclient.so.0.5.0  libtool  migrate_to_scratchbird.sh  sb_build_all  sb_gfix_minimal  sb_gfix_minimal.cpp  sb_gstat  (+26 more)
build_scripts/: build_release  complete_release.sh  create_linux_installer.sh  create_windows_installer.sh  sb_build_all.sh
doc/: HIERARCHICAL_SCHEMA_REORGANIZATION_PLAN.md  README.gssapi_authentication  SQL Data Types.md  ScratchBird  Collation DDL Lifecycle.md  ScratchBird  Sequence_Generator DDL Lifecycle.md  ScratchBird  Specific SET Commands.md  ScratchBird ALTER SESSION RESET Statement.md  ScratchBird Built-in Functions and Expressions.md  ScratchBird COMMENT ON Statement Details.md  ScratchBird COMMIT Statement.md  ScratchBird CREATE DATABASE Details.md  ScratchBird Core PSQL Syntax.md  ScratchBird DELETE Statement.md  ScratchBird Data Types_ A Deep Dive.md  ScratchBird Database Link DDL Lifecycle.md  ScratchBird Domain DDL Lifecycle.md  ScratchBird EXECUTE PROCEDURE and CALL.md  ScratchBird Exception DDL Lifecycle.md  ScratchBird Function DDL Lifecycle.md  ScratchBird GRANT Statement.md  ScratchBird INSERT Statement.md  ScratchBird Index DDL Lifecycle.md  ScratchBird Logical Replication and Publication DDL.md  ScratchBird MERGE Statement.md  ScratchBird Miscellaneous DDL Statements.md  ScratchBird PLAN Clause Syntax.md  ScratchBird PSQL Control-Flow Statements.md  ScratchBird Package DDL Lifecycle.md  ScratchBird REVOKE Statement.md  ScratchBird ROLLBACK Statement.md  ScratchBird SAVEPOINT Lifecycle.md  ScratchBird SELECT Statement.md  ScratchBird SET BIND Statement.md  ScratchBird SET ROLE Statement.md  ScratchBird SET TIME ZONE Statement.md  ScratchBird SET TRANSACTION Statement.md  ScratchBird Schema Management Details.md  (+11 more)
examples/: README.md  (+1 more)
src/remote/: CMakeLists.txt  SockAddr.h  inet.cpp  inet_proto.h  merge.cpp  parser.cpp  protocol.cpp  protocol.h  remot_proto.h  remote.cpp  remote.h
src/remote/client/: BlrFromMessage.cpp  BlrFromMessage.h  interface.cpp  interface.h
src/remote/os/win32/: xnet.cpp  xnet_proto.h
src/remote/server/: ReplServer.cpp  ReplServer.h  server.cpp
src/remote/server/os/posix/: inet_server.cpp
src/remote/server/os/win32/: cntl.cpp  property.cpp  srvr_w32.cpp  window.cpp  window.h
src/utilities/modern/: CMakeLists.txt  README.md  sb_gbak.cpp  sb_gfix.cpp  sb_gsec.cpp  sb_gssplit  sb_gssplit.cpp  sb_gstat.cpp  sb_isql.cpp  sb_lock_print  sb_lock_print.cpp  sb_svcmgr  sb_svcmgr.cpp  sb_tracemgr  sb_tracemgr.cpp  scratchbird.cpp  scratchbird_windows.cpp
(+881 files in other folders)
